fixed example and proof

--- a/notes/courses/real-analysis/8-open-and-closed-sets.mkd
+++ b/notes/courses/real-analysis/8-open-and-closed-sets.mkd
@@ -29,7 +29,7 @@ For example,
 
 (@) $G = \{\frac{1}{n} : n \in \mathbb{Z}\}$ has no interior points.
 (@) In $\mathbb{R}$, $\emptyset$ has no limit points, no interior points, and no isolated points, for $\mathbb{R}$ has no isolated points but all points in $\mathbb{R}$ are interior and are limit points, and $\mathbb{Q}$ has no isolated points and no interior points but all points in $\mathbb{Q}$ are limit points.
-(@) In ($\mathbb{R}$, $\text{discrete}$), $\emptyset$ has no limit points, no interior points, and no isolated points, $\mathbb{R}$ has no limit points but all points in $\mathbb{R}$ are interior and isolated, and $\mathbb{Q}$ has no limit points and no interior points but all points in $\mathbb{Q}$ are isolated.
+(@) In ($\mathbb{R}$, $\text{discrete}$), $\emptyset$ has no limit points, no interior points, and no isolated points, $\mathbb{R}$ has no limit points but all points in $\mathbb{R}$ are interior and isolated, and $\mathbb{Q}$ has no limit points but all points in $\mathbb{Q}$ are interior and isolated.
 
 __Theorem.__ If $p$ is a limit point of $E$, then every neighborhood of $p$ contains infinitely many points of $E$.
 
@@ -101,7 +101,8 @@ E \text{ is open} & \Leftrightarrow \text{all points } p \in E \text{ has a neig
 & \Leftrightarrow \forall p \in E, \exists N_r(p) \subset E \\
 & \Leftrightarrow \forall p \in E, \exists N_r(p) \cap E^c = \emptyset \\
 & \Leftrightarrow \forall p \in E, p \text{ is not a limit point of } E^c \\
-& \Leftrightarrow E^c \text{ contains all its limit points}
+& \Leftrightarrow E^c \text{ contains all its limit points} \\
+& \Leftrightarrow E^c \text{ is closed}
 \end{align}
 QED.
 
