--- a/notes/courses/real-analysis/9-compact-sets.mkd
+++ b/notes/courses/real-analysis/9-compact-sets.mkd
@@ -116,3 +116,39 @@ _Proof._ If subset $E$ is bounded then $E$ is in some compact $k$-cell. So $E$ h
 __Theorem (Finite intersection property, due to Cantor).__ Let $\{K_\alpha\}$ be compact subsets of some metric space $X$. If any finite subsollection has non-empty intersection then the intersection of all $K_\alpha$ is non-empty.
 
 _Proof (by contradiction)._ Let $U_\alpha = K_\alpha^c$, which is open. Choose an arbitrary $K$ from $\{K_\alpha\}$. If $\bigcap\limits_\alpha K_\alpha = \emptyset$, then $\{U_\alpha\}$ covers $K$. Since $K$ is compact, there exists a finite subcover $\{U_{\alpha_1}, \dots U_{\alpha_n}\}$ covering $K$. So, $K \cap K_{\alpha_1} \cap \dots \cap K_{\alpha_n} = \emptyset$, which constradicts the hypothesis. QED.
+
+__Corollary.__ Let $\{K_n\}$ be a sequence of compact nested sets. Then $\bigcap_{n = 1}^\infty K_n$ is non-empty.
+
+__Theorem.__ Any space $X$ is compact $\Leftrightarrow$ Any collection of closed sets $\{D_\alpha\}$ satisfies the finite intersection property (if _every_ finite subcollection has non-empty intersection, then $\bigcap D_\alpha \neq \emptyset$).
+
+_Proof._
+
+($\Rightarrow$): Consider $\{D_\alpha\}$. These are closed subset of a compact space $X$, so they are compact. Apply the previous theorem to get the conclusion.
+
+($\Leftarrow$): Consider any open cover $\{U_\alpha\}$ of $X$. Then each $U_\alpha^c$ is closed and thus $\{U_\alpha^c\}$ satisfies the finite intersection property. If $\bigcap\limits_\alpha U_\alpha^c \neq \emptyset$, consider a point $x \in \bigcap\limits_\alpha U_\alpha^c$. So $x \in U_\alpha^c$ for all $\alpha$. Hence, $x \notin U_\alpha$ for all $\alpha$. Thus, $\{U_\alpha\}$ is not a cover of $X$, which is a contradiction. Therefore, $\bigcap\limits_\alpha U_\alpha^c = \emptyset$ and there exists a finite subcollection $\{U_{\alpha_i}^c\}_{i = 1}^n$ such that $\bigcap\limits_{i = 1}^n U_{\alpha_i}^c = \emptyset$. Hence, every point $y$ is not in $\bigcap\limits_{i = 1}^n U_{\alpha_i}^c$, which implies every point $y$ is in $\bigcup\limits_{i = 1}^n U_{\alpha_i}$. Thus, that subcollection of open sets $\{U_{\alpha_i}\}_{i = 1}^n$ is a finite subcover for $X$, as desired. QED.
+
+_Proof for ($\Leftarrow$) by contrapositive._ Assume $X$ is not compact. Hence, there exists an open cover $\{U_\alpha\}$ with no finite subcover. Since $\{U_\alpha\}$ is a cover, every point $y \in X$ is in $\bigcup\limits_\alpha U_\alpha$, which implies every point $y \in X$ is not in $\bigcap\limits_\alpha U_\alpha$. Hence, $\bigcap\limits_\alpha U_\alpha = \emptyset$. Consider any subcollection $\{U_{\alpha_i}\}_{i = 1}^n$. Since $\{U_{\alpha_i}\}_{i = 1}^n$ is not a subcover of $X$, there exists $x \in X \setminus \bigcup\limits_{i = 1}^n U_{\alpha_i}$, which implies $x \in X \cap \bigcap\limits_{i = 1}^n U_{\alpha_i}$. So $\bigcap\limits_{i = 1}^n U_{\alpha_i} \neq \emptyset$, as desired. QED.
+
+## Perfect Sets
+
+A set is _perfect_ if it is closed and every point is a limit point.
+
+For example,
+
+(@) Any closed interval $[a, b]$ is perfect.
+(@) $\mathbb{R}$ is perfect.
+
+## Cantor Sets
+
+Start with $K_0 = [0, 1]$. Construct $K_1$ by removing the middle third of $K_0$, i.e. $K_1 = \left[0, \frac{1}{3}\right] \cup \left[\frac{2}{3}, 1\right]$. Construct $K_2$ by removing the middle thirds of the intervals in $K_1$, i.e. $K_2 = \left[0, \frac{1}{9}\right] \cup \left[\frac{2}{9}, \frac{3}{9}\right] \cup \left[\frac{6}{9}, \frac{7}{9}\right] \cup \left[\frac{8}{9}, 1\right]$. Continue with the construction.
+
+Each $K_n$ has $2^n$ intervals. Each is closed because each is a finite union of closed sets. Each is compact because each is a closed subset of the compact set $[0, 1]$. Finally, all $K_n$ are nested. Hence, their intersection is non-empty.
+
+Let $C = \bigcap\limits_{n = 0}^\infty K_n$, called the Cantor set. Notice that
+
+- $C$ is closed because it is the intersection of arbitrary many closed sets.
+- $C$ is perfect.
+- $C$ consists of real numbers whose ternary expansion contains only $0$s or $2$s, which shows that $C$ is uncountable (or $C$ has non-endpoints of $K_n$).
+- $C$ has no interior.
+- $C$ is totally disconnected.
+- $C$ has measure $0$, i.e. for any $\epsilon > 0$, $C$ can be covered by intervals of total length less than $\epsilon$.
